# kinopoisk-rec-sys

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_bot  README.md  compose.yaml  pyproject.toml  requirements.txt
docker/: compose.yaml
kinopoisk_rec_sys/: api_client.py  duck.py  models.py  scylla.py  search.py  telegram.py  telegram_bot.py
