[tool.poetry]
name = "kinopoisk-rec-sys"
version = "0.1.0"
description = ""
authors = ["NikitaSharov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
attrs = "^23.2.0"
jinja2 = "^3.1.4"
scylla-driver = "^3.26.9"
pytelegrambotapi = "^4.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
